server for game & relay

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "average-color": "^1.0.0",
     "is-color": "^0.2.0",
-    "randomcolor": "^0.5.2"
+    "randomcolor": "^0.5.2",
+    "socket.io": "^2.0.1",
+    "socket.io-client": "^2.0.1"
   }
 }
