relay & server production config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Game Of Life",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_PATH=. ./node_modules/mocha/bin/mocha -c test/**/*.js"
+    "test": "NODE_PATH=. ./node_modules/mocha/bin/mocha -c test/**/*.js",
+    "start": "NODE_PATH=. node lib/server.js",
+    "relay": "NODE_PATH=. node index.js"
   },
   "author": "Tamil Vendhan K",
   "license": "MIT",
