--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "average-color": "^1.0.0",
     "config": "^1.26.1",
     "is-color": "^0.2.0",
+    "pino": "^4.5.2",
     "randomcolor": "^0.5.2",
     "socket.io": "^2.0.1",
     "socket.io-client": "^2.0.1"
