bug fix: average color

--- a/supervisor/world-server.conf
+++ b/supervisor/world-server.conf
@@ -1,5 +1,5 @@
 [program:world-server]
-command=/usr/local/bin/node index.js
+command=/usr/local/bin/node lib/server.js
 directory=/home/tamil/game-of-life
 user=tamil
 autorestart=true
