--- a/nginx.conf
+++ b/nginx.conf
@@ -3,14 +3,14 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
-upstream websocket {
+upstream relayServer {
     server 127.0.0.1:3001;
 }
 
 server {
     listen 80;
     location / {
-        proxy_pass http://websocket;
+        proxy_pass http://relayServer;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
