--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 map $http_upgrade $connection_upgrade {
-    default upgrade;
+    default Upgrade;
     '' close;
 }
 
@@ -10,9 +10,9 @@ upstream relayServer {
 server {
     listen 80;
     location / {
-        proxy_pass http://relayServer;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+        proxy_pass http://relayServer;
     }
 }
