--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pino": "^4.5.2",
     "randomcolor": "^0.5.2",
     "socket.io": "^2.0.1",
-    "socket.io-client": "^2.0.1"
+    "socket.io-client": "^2.0.1",
+    "ws": "^3.0.0"
   }
 }
