--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "socket.io": "^2.0.1",
     "socket.io-client": "^2.0.1",
     "ws": "^3.0.0"
+  },
+  "engines": {
+    "node": "8.0.0"
   }
 }
