updating heroku port config

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_PATH=. ./node_modules/mocha/bin/mocha -c test/**/*.js",
-    "start": "NODE_PATH=. node lib/server.js",
-    "relay": "NODE_PATH=. node index.js"
+    "start": "NODE_PATH=. NODE_ENV=production node lib/server.js",
+    "relay": "NODE_PATH=. NODE_ENV=production node index.js"
   },
   "author": "Tamil Vendhan K",
   "license": "MIT",
