--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Game Of Life",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_PATH=. ./node_modules/mocha/bin/mocha -c test/**/*.js",
-    "start": "NODE_PATH=. NODE_ENV=production node lib/server.js",
-    "relay": "NODE_PATH=. NODE_ENV=production node index.js"
+    "start": "NODE_PATH=. NODE_ENV=production node index.js"
   },
   "author": "Tamil Vendhan K",
   "license": "MIT",
@@ -15,14 +13,9 @@
     "should": "^11.2.1"
   },
   "dependencies": {
-    "jsondiffpatch": "^0.2.4",
-    "average-color": "^1.0.0",
     "config": "^1.26.1",
-    "is-color": "^0.2.0",
-    "pino": "^4.5.2",
-    "randomcolor": "^0.5.2",
-    "socket.io": "^2.0.1",
-    "socket.io-client": "^2.0.1",
+    "pino": "^4.5.4",
+    "socket.io-client": "^2.0.2",
     "ws": "^3.0.0"
   },
   "engines": {
